--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,10 @@
       <artifactId>hibernate-jpamodelgen</artifactId>
       <version>1.2.0.Final</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-lang</groupId>
+    	<artifactId>commons-lang</artifactId>
+    	<version>2.6</version>
+    </dependency>
   </dependencies>
 </project>
