--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
             <phase>generate-sources</phase>
             <configuration>
               <!-- source output directory
-              <outputDirectory>src/main/generated</outputDirectory>
               -->
+              <outputDirectory>src/main/generated</outputDirectory>
             </configuration>
           </execution>
         </executions>
@@ -61,6 +61,11 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-jpamodelgen</artifactId>
       <version>1.2.0.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-lang</groupId>
+    	<artifactId>commons-lang</artifactId>
+    	<version>2.6</version>
     </dependency>
   </dependencies>
 </project>
