--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
   <modelVersion>4.0.0</modelVersion>
-  <groupId>metafactory-demo</groupId>
-  <artifactId>metafactory-demo</artifactId>
+  <groupId>metafactory-tutorial</groupId>
+  <artifactId>metafactory-tutorial</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>MetaFactory Demo Project</name>
+  <name>MetaFactory Tutorial Project</name>
   <description>A project to show different MetaFactory examples</description>
   <properties>
     <slf4j.version>1.6.6</slf4j.version>
