--- a/example3/pom.xml
+++ b/example3/pom.xml
@@ -4,7 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>metafactory-tutorial</groupId>
+    <parent>
+        <groupId>metafactory-tutorial</groupId>
+        <artifactId>metafactory-tutorial</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <artifactId>example3</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
