--- a/example6/pom.xml
+++ b/example6/pom.xml
@@ -4,9 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>metafactory-tutorial</groupId>
+    <parent>
+        <groupId>metafactory-tutorial</groupId>
+        <artifactId>metafactory-tutorial</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <artifactId>example6</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-api</artifactId>
+        </dependency>
+    </dependencies>
 
     
 </project>
